--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,3 @@
-.coderwall { float: right; }
+.coderwall { float: right !important; }
 .stack-exchange { float: right; }
 footer { margin-top: 5em; }
